# HOSER

./: .gitignore  .pre-commit-config.yaml  ABNORMAL_CROSS_DATASET.md  ABNORMAL_OD_WORKFLOW.md  BASELINE_STATISTICS.md  BEAM_ABLATION_NORMALIZED_METRICS_PLAN.md  CHANGELOG.md  CLAUDE.md  DEBUGGING_NOTES.md  DYNAMIC_HEATMAP_IMPLEMENTATION.md  LMTAD-Distillation.md  PREPROCESSING_ANALYSIS.md  PRIVACY_ANALYSIS.md  README.md  ROAD_NETWORK_MAPPING.md  RUN_WANG_ABNORMALITY_ANALYSIS.md  SCENARIO_REFACTOR_SUMMARY.md  SETUP_EVALUATION_GUIDE.md  WANDB_CLI_EXAMPLES.md  WANG_ABNORMALITY_DETECTION_RESULTS.md  WANG_STATISTICAL_DETECTION_PLAN.md  caoji-hoser-eval.py  check_connectivity.py  create_analysis_figures.py  create_distribution_plots.py  create_scenario_plots.py  dataset.py  evaluation.py  gene.py  generate_all_plots.py  heat-map.py  heatmap.ipynb  hoser-eval-caoji.ipynb  map_manager.py  pyproject.toml  python_pipeline.py  run_beam_ablation.sh  setup_evaluation.py  test_od_identity.py  train.py  (+6 more)
.cursor/: fix-existing-worktrees.sh  mcp.json  setup-worktree-unix.sh  wait-for-setup.sh  worktrees.json
config/: BJUT_Beijing.yaml  Beijing.yaml  Beijing_vanilla.yaml  San_Francisco.yaml  abnormal_detection.yaml  abnormal_detection_statistical.yaml  evaluation.yaml  evaluation_lmtad_example.yaml  porto_hoser.yaml  porto_hoser_phase2.yaml  scenario_plots.yaml  scenarios_beijing.yaml  scenarios_bjut_beijing.yaml
critics/: distill_hook.py  grid_mapper.py  lmtad_teacher.py
docs/: ABNORMAL_OD_WORKFLOW_GUIDE.md  ARCHITECTURE_SPECIFICATION.md  BEAM_ABLATION_STUDY.md  CHECKPOINT_STRATEGY.md  CONFIG_LOADER_LMTAD_SUPPORT.md  DATASET_SETUP.md  EFFECT_SIZE_INTERPRETATION.md  EVALUATION_COMPARISON.md  EVALUATION_PIPELINE_GUIDE.md  HARDCODED_CONFIG_AUDIT.md  Hyperparameter-Optimization.md  LMTAD-Distillation.md  NORMALIZED_METRICS_IMPACT_SUMMARY.md  PAIRED_STATISTICAL_TESTS_GUIDE.md  PERFORMANCE_PROFILING_SUMMARY.md  README.md  SCENARIO_ANALYSIS_GUIDE.md  SEARCH_METHOD_GUIDANCE.md  TRAJECTORY_METRICS_SPECIFICATION.md  VISUALIZATION_GUIDE.md  VOCABULARY_MAPPING_VALIDATION.md
examples/: paired_tests_demo.py  plot_lmtad_evaluation_example.py
hoser-distill-optuna-6/: ABNORMAL_ANALYSIS_RESULTS.md  ABNORMAL_FINAL_RESULTS.md  EVALUATION_ANALYSIS.md  OD_MATCHING_EXPLAINED.md  PIPELINE_USAGE.md  QUICK_START.md  README.md  (+10 more)
(+172 files in other folders)
