[project]
name = "hoser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmaes>=0.12.0",
    "contextily>=1.6.2",
    "fastdtw>=0.3.4",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "haversine>=2.9.0",
    "kaleido==0.2.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "optuna-integration[wandb]>=4.5.0",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "polars-timeseries>=0.3.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "statsmodels>=0.14.5",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
]

[tool.uv.sources]
polars-timeseries = { git = "https://github.com/drumtorben/polars-ts.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
